fix options overlapping the visualization IE, FF

--- a/src/app/components/test.component/test.component.scss
+++ b/src/app/components/test.component/test.component.scss
@@ -60,6 +60,8 @@
     top: 20%;
     left: 2em;
     z-index: 1000;
+    width: auto;
+    max-width: 350px;
 }
 
 #brush-holder {
